tests/fixtures/errors/member_string_on_string.z
# `.string` on an already-owned String is not a declared member -- it resolves
# as an ordinary member access and fails (spell an owned duplicate `.copy`),
# rather than silently projecting onto StringView.string.
main: function is {
    s: "hi".string
    x: s.string
    print "\{x}"
}
